--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -38,8 +38,8 @@ drive-proof-verifier = { git = "https://github.com/pankcuf/platform", branch = "
 indexmap = "2.7.0"
 platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-value" }
 platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-version" }
-ferment = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment" }
-ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/reorg", package = "ferment-macro" }
+ferment = { git = "https://github.com/dashpay/ferment", branch = "feat/lifetime-support", package = "ferment" }
+ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/lifetime-support", package = "ferment-macro" }
 http = { version = "0.2.12" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tokio-util = { version = "0.7.10" }
