--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -31,13 +31,13 @@ blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
+dashcore = { git = "https://github.com/pankcuf/rust-dashcore", features = [
     "std",
     "secp-recovery",
     "rand",
     "signer",
     "serde",
-], default-features = false, tag = "0.34.0" }
+], default-features = false, branch = "feat/ferment" }
 dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
 libc = "0.2.158"
