--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -18,13 +18,13 @@ anyhow = "1.0.95"
 #platform-version = { path = "../../platform/packages/rs-platform-version" }
 bitcoin_hashes = { version = "0.11.0", default-features = false }
 dapi-grpc = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dapi-grpc" }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
+dashcore = { git = "https://github.com/pankcuf/rust-dashcore", features = [
     "std",
     "secp-recovery",
     "rand",
     "signer",
     "serde",
-], default-features = false, tag = "0.34.0" }
+], default-features = false, branch = "feat/ferment" }
 dash-sdk = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dash-sdk" }
 dash-spv-crypto = { path = "../dash-spv-crypto" }
 dash-spv-event-bus = { path = "../dash-spv-event-bus" }
