--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -31,7 +31,7 @@ blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
-dashcore = { git = "https://github.com/pankcuf/rust-dashcore", features = [
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
     "std",
     "secp-recovery",
     "rand",
@@ -42,8 +42,8 @@ dirs-next = "2.0.0"
 ed25519-dalek = "2.0.0-rc.3"
 libc = "0.2.158"
 log = { version = "0.4.*", features = ["std"] }
-ferment = { git = "https://github.com/dashpay/ferment", branch = "feat/lifetime-support", package = "ferment" }
-ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/lifetime-support", package = "ferment-macro" }
+ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
+ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
 #ferment = { path = "../../ferment/ferment" }
 #ferment-macro = { path = "../../ferment/ferment-macro" }
 
