--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -9,52 +9,43 @@ publish = true
 
 [dependencies]
 anyhow = { version = "1.0.75" }
-bitcoin_hashes = { version = "0.11.0", default-features = false }
-blake3 = "1.3.2"
+#bitcoin_hashes = "0.16.0"
 byte = "0.2"
 dash-spv-crypto = { path = "../dash-spv-crypto", features = ["default"] }
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
 dash-spv-platform = { path = "../dash-spv-platform" }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
-    "std",
-    "secp-recovery",
-    "rand",
-    "signer",
-    "serde",
-], default-features = false, branch = "feat/ferment" }
-dash-sdk = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dash-sdk" }
-data-contracts = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "data-contracts" }
-dpp = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "dpp", default-features = false, features = ["dash-sdk-features"] }
-drive = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive", default-features = false, features = ["verify"] }
-drive-proof-verifier = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "drive-proof-verifier" }
-platform-value = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-value" }
-platform-version = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "platform-version" }
-rs-dapi-client = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "rs-dapi-client", default-features = false }
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple"], default-features = false, branch = "feat/ferment" }
 
-#dpp = { path = "../../platform/packages/rs-dpp", features = ["state-transitions"] }
-#drive = { path = "../../platform/packages/rs-drive" }
-#drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
-#platform-value = { path = "../../platform/packages/rs-platform-value" }
-#platform-version = { path = "../../platform/packages/rs-platform-version" }
-#rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
-fancy-regex = "0.13.0"
+#dash-sdk = { path = "../../platform/packages/rs-sdk", package = "dash-sdk" }
+#data-contracts = { path = "../../platform/packages/data-contracts", package = "data-contracts" }
+#dpp = { path = "../../platform/packages/rs-dpp", package = "dpp", default-features = false, features = ["dash-sdk-features", "apple"] }
+#drive = { path = "../../platform/packages/rs-drive", package = "drive", default-features = false, features = ["verify"] }
+#drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier", package = "drive-proof-verifier" }
+#platform-value = { path = "../../platform/packages/rs-platform-value", package = "platform-value", features = ["apple"] }
+#platform-version = { path = "../../platform/packages/rs-platform-version", package = "platform-version", features = ["apple"] }
+
+dash-sdk = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dash-sdk", features = ["apple"] }
+data-contracts = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "data-contracts", features = ["apple"] }
+dpp = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dpp", default-features = false, features = ["dash-sdk-features", "apple"] }
+drive = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "drive", default-features = false, features = ["verify"] }
+drive-proof-verifier = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "drive-proof-verifier", features = ["apple"] }
+platform-value = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-value", features = ["apple"] }
+platform-version = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-version", features = ["apple"] }
+grovedb-version = "2.2.1"
+versioned-feature-core = "1.0.0"
+
 ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
 ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
-#ferment = { path = "../../ferment/ferment" }
-#ferment-macro = { path = "../../ferment/ferment-macro" }
-grovedb-version = "2.1.0"
+
 indexmap = { version = "2.0.2", features = ["serde"] }
-jsonschema = "0.22.3"
+jsonschema = "0.29.0"
+
 regex = { version = "1.10.4" }
 rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
-rs-x11-hash = "0.1.8"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = { version = "1.0", features = ["preserve_order"] }
-thiserror = { version = "1.0.64" }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-tokio-util = { version = "0.7.10" }
-versioned-feature-core = "1.0.0"
-#
+
 [dev-dependencies]
 libc = "0.2.146"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
@@ -97,7 +88,6 @@ mock-versions = ["platform-version/mock-versions"]
 objc = ["ferment-sys/objc"]
 cbindgen_only = ["ferment-sys/cbindgen_only"]
 platform-value = ["dpp/platform-value"]
-#serde = ["dash-spv-masternode-processor/serde"]
 state-transitions = ["dpp/state-transitions", "dash-spv-platform/state-transitions"]
 state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
 state-transition-validation = ["dpp/state-transition-validation"]
