--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -25,35 +25,22 @@ std = ["secp256k1/std", "bitcoin_hashes/std"]
 
 [dependencies]
 bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
-bitcoin_hashes = { version = "0.11.0", default-features = false }
-bitcoinconsensus = { version = "0.19.0-3", optional = true }
+bitcoin_hashes = { version = "0.16.0", default-features = false }
 blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 core2 = { version = "0.4.0", optional = true, default-features = false }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
-    "std",
-    "secp-recovery",
-    "rand",
-    "signer",
-    "serde",
-], default-features = false, branch = "feat/ferment" }
-dirs-next = "2.0.0"
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple"], default-features = false, branch = "feat/ferment" }
 ed25519-dalek = "2.0.0-rc.3"
-libc = "0.2.158"
 log = { version = "0.4.*", features = ["std"] }
 ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
 ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
-#ferment = { path = "../../ferment/ferment" }
-#ferment-macro = { path = "../../ferment/ferment-macro" }
 
 rs-x11-hash = "0.1.8"
 secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
 serde = { version = "1.0.215", features = ["derive"], optional = true }
-serde_json = "1.0.85"
 simplelog = "0.12.2"
 zeroize = "1.5.7"
-bincode = "2.0.0-rc.3"
 
 [dev-dependencies]
 base64 = "0.21.0"
