feat: migration to rust-dashcore

--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -9,11 +9,13 @@ publish = true
 
 [dependencies]
 anyhow = { version = "1.0.75" }
+bincode_derive = "=2.0.0-rc.3"
+
 byte = "0.2"
 dash-spv-crypto = { path = "../dash-spv-crypto", features = ["default"] }
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
 dash-spv-platform = { path = "../dash-spv-platform" }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation", "bincode"], default-features = false, branch = "feat/ferment" }
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
 
 #dash-sdk = { path = "../../platform/packages/rs-sdk", package = "dash-sdk" }
 #data-contracts = { path = "../../platform/packages/data-contracts", package = "data-contracts" }
@@ -92,7 +94,7 @@ state-transitions = ["dpp/state-transitions", "dash-spv-platform/state-transitio
 state-transition-json-conversion = ["dpp/state-transition-json-conversion"]
 state-transition-validation = ["dpp/state-transition-validation"]
 state-transition-signing = ["dpp/state-transition-signing"]
-std = ["platform-value/std", "dash-spv-crypto/std", "dash-spv-masternode-processor/std", "dashcore/std"]
+std = ["platform-value/std", "dashcore/std", "dash-spv-masternode-processor/std"]
 system_contracts = ["dpp/system_contracts"]
 test-helpers = ["dash-spv-masternode-processor/test-helpers"]
 use_serde = ["serde", "dash-spv-masternode-processor/use_serde", "dash-spv-crypto/use_serde"]
