--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -7,65 +7,46 @@ edition = "2021"
 publish = false
 
 [features]
-default = ["std", "secp-recovery"]
-unstable = []
-rand = ["secp256k1/rand-std"]
-secp-lowmemory = ["secp256k1/lowmemory"]
-secp-recovery = ["secp256k1/recovery"]
+default = ["message_verification"]
 generate-dashj-tests = []
+message_verification = ["dashcore/message_verification"]
 test-helpers = []
 use_serde = ["serde"]
-# At least one of std, no-std must be enabled.
-#
-# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
-# Instead no-std enables additional features required for this crate to be usable without std.
-# As a result, both can be enabled without conflict.
-std = ["secp256k1/std", "bitcoin_hashes/std"]
-#std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std"]
-#no-std = ["hashbrown", "core2/alloc", "bitcoin_hashes/alloc"]
-#[profile.test]
-#default = ["use_serde", "test-helpers"]
+std = ["dashcore/std"]
+
+#bincode = ["dashcore/bincode"]
 
 [dependencies]
-bitcoin_hashes = { version = "0.16.0", default-features = false }
 blake3 = "1.3.2"
+bincode = "=2.0.0-rc.3"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 dash-spv-crypto = { path = "../dash-spv-crypto" }
 dirs-next = "2.0.0"
-ed25519-dalek = "2.0.0-rc.3"
-indexmap = "2.7.0"
-log = { version = "0.4.*", features = ["std"] }
+#ed25519-dalek = "2.0.0-rc.3"
 ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
 ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
 #ferment = { path = "../../ferment/ferment" }
 #ferment-macro = { path = "../../ferment/ferment-macro" }
 
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
-    "std",
-    "secp-recovery",
-    "rand",
-    "signer",
-    "serde",
-    "bls",
-    "quorum_validation",
-    "bincode",
-], default-features = false, branch = "feat/ferment" }
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation", "bincode"], default-features = false, branch = "feat/ferment" }
 
 rs-x11-hash = "0.1.8"
-secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = "1.0.85"
 simplelog = "0.12.2"
 reqwest = { version =  "0.12.9", features = ["blocking", "json"] }
 
 [dev-dependencies]
-base64 = "0.21.0"
+base64 = "0.22.1"
 serde = { version = "1.0.209", features = ["derive"] }
 
 [lib]
 name = "dash_spv_masternode_processor"
 #crate-type = ["staticlib", "cdylib"]
+
+#[profile.test]
+#default = ["use_serde", "test-helpers"]
 
 #[profile.release]
 #lto = "thin"
