--- a/dash-spv-apple-bindings/cbindgen.toml
+++ b/dash-spv-apple-bindings/cbindgen.toml
@@ -15,6 +15,7 @@ parse_deps = true
 include = [
     "ferment",
     "dash-spv-crypto",
+    "dash-spv-keychain",
     "dash-spv-masternode-processor",
     "dash-spv-platform",
     "dash-sdk",
@@ -34,6 +35,7 @@ include = [
 extra_bindings = [
     "ferment",
     "dash-spv-crypto",
+    "dash-spv-keychain",
     "dash-spv-masternode-processor",
     "dash-spv-platform",
     "dash-sdk",
