--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -17,11 +17,13 @@ blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
+dash-spv-keychain = { path = "../dash-spv-keychain" }
+
 ed25519-dalek = "2.1.1"
 log = { version = "0.4.*", features = ["std"] }
 ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
 ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
-
+indexmap = "2.8.0"
 rs-x11-hash = "0.1.8"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 simplelog = "0.12.2"
