--- a/dash-spv-apple-bindings/cbindgen.toml
+++ b/dash-spv-apple-bindings/cbindgen.toml
@@ -14,6 +14,7 @@ parse_deps = true
 #expand = ["dash-spv-masternode-processor", ]
 include = [
     "ferment",
+    "dash-spv-coinjoin",
     "dash-spv-crypto",
     "dash-spv-keychain",
     "dash-spv-masternode-processor",
@@ -34,6 +35,7 @@ include = [
 ]
 extra_bindings = [
     "ferment",
+    "dash-spv-coinjoin",
     "dash-spv-crypto",
     "dash-spv-keychain",
     "dash-spv-masternode-processor",
