--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -17,21 +17,13 @@ dash-spv-crypto = { path = "../dash-spv-crypto", features = ["default"] }
 dash-spv-keychain = { path = "../dash-spv-keychain" }
 dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
 dash-spv-platform = { path = "../dash-spv-platform" }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
-
-#dash-sdk = { path = "../../platform/packages/rs-sdk", package = "dash-sdk" }
-#data-contracts = { path = "../../platform/packages/data-contracts", package = "data-contracts" }
-#dpp = { path = "../../platform/packages/rs-dpp", package = "dpp", default-features = false, features = ["dash-sdk-features", "apple"] }
-#drive = { path = "../../platform/packages/rs-drive", package = "drive", default-features = false, features = ["verify"] }
-#drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier", package = "drive-proof-verifier" }
-#platform-value = { path = "../../platform/packages/rs-platform-value", package = "platform-value", features = ["apple"] }
-#platform-version = { path = "../../platform/packages/rs-platform-version", package = "platform-version", features = ["apple"] }
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
 
 dash-sdk = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dash-sdk", features = ["apple"] }
 data-contracts = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "data-contracts", features = ["apple"] }
 dpp = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dpp", default-features = false, features = ["dash-sdk-features", "apple"] }
 drive = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "drive", default-features = false, features = ["verify"] }
-drive-proof-verifier = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "drive-proof-verifier", features = ["apple"] }
+drive-proof-verifier = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "drive-proof-verifier", default-features = false, features = ["apple"] }
 platform-value = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-value", features = ["apple"] }
 platform-version = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-version", features = ["apple"] }
 grovedb-version = "2.2.1"
@@ -45,7 +37,7 @@ jsonschema = "0.29.0"
 logging = { path = "../logging" }
 tracing = "0.1.40"
 regex = { version = "1.10.4" }
-rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
+#rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
@@ -109,13 +101,4 @@ crate-type = ["staticlib", "cdylib"]
 
 [package.metadata]
 ios-deployment-target = "12.0"  # Set to a common minimum target (e.g., 12.0)
-
-#[profile.release]
-#lto = "thin"
-#opt-level = 3
-#debug = true
-#
-
-#[profile.test]
-#default = ["use_serde", "test-helpers"]
 
