--- a/dash-spv-apple-bindings/Cargo.toml
+++ b/dash-spv-apple-bindings/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash_spv_apple_bindings"
-version = "0.5.0"
+version = "0.5.1"
 description = "C-bindings for using and interoperating with Dash SPV"
 readme = "README.md"
 edition = "2021"
@@ -12,13 +12,13 @@ anyhow = { version = "1.0.75" }
 bincode_derive = "=2.0.0-rc.3"
 
 byte = "0.2"
-dash-spv-coinjoin = { path = "../dash-spv-coinjoin", features = [] }
-dash-spv-crypto = { path = "../dash-spv-crypto", features = ["default"] }
-dash-spv-keychain = { path = "../dash-spv-keychain" }
-dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default"] }
-dash-spv-platform = { path = "../dash-spv-platform" }
-dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
+dash-spv-coinjoin = { workspace = true, features = [] }
+dash-spv-keychain = { workspace = true }
+dash-spv-crypto = { workspace = true, features = ["default"] }
+dash-spv-masternode-processor = { workspace = true, features = ["default"] }
+dash-spv-platform = { workspace = true }
 
+dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
 dash-sdk = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dash-sdk", features = ["apple"] }
 data-contracts = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "data-contracts", features = ["apple"] }
 dpp = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dpp", default-features = false, features = ["dash-sdk-features", "apple"] }
@@ -37,7 +37,6 @@ jsonschema = "0.29.0"
 logging = { path = "../logging" }
 tracing = "0.1.40"
 regex = { version = "1.10.4" }
-#rs-merk-verify-c-binding = { version = "0.1.3", git = "https://github.com/dashpay/rs-merk-verify-c-binding", branch = "for-use-in-main-crate" }
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
@@ -45,7 +44,7 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 [dev-dependencies]
 libc = "0.2.146"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
-dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor", features = ["default", "test-helpers"] }
+dash-spv-masternode-processor = { workspace = true, features = ["default", "test-helpers"] }
 serde = { version = "1.0.209", features = ["derive"] }
 
 [build-dependencies]
