--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash-spv-crypto"
-version = "0.0.1"
+version = "0.5.1"
 description = "Library for key derivation"
 
 edition = "2021"
@@ -17,7 +17,7 @@ blake3 = "1.3.2"
 bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
-dash-spv-keychain = { path = "../dash-spv-keychain" }
+dash-spv-keychain = { workspace = true }
 
 ed25519-dalek = "2.1.1"
 log = { version = "0.4.*", features = ["std"] }
