--- a/dash-spv-masternode-processor/Cargo.toml
+++ b/dash-spv-masternode-processor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dash-spv-masternode-processor"
-version = "0.4.18"
+version = "0.5.1"
 description = "Library for processing masternodes and quorums (SPV)"
 
 edition = "2021"
@@ -17,8 +17,8 @@ std = ["dashcore/std"]
 [dependencies]
 blake3 = "1.3.2"
 bincode = "=2.0.0-rc.3"
-bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
-dash-spv-crypto = { path = "../dash-spv-crypto" }
+#bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
+dash-spv-crypto = { workspace = true }
 dirs-next = "2.0.0"
 ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
 ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
