--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -14,7 +14,7 @@ use_serde = ["serde"]
 [dependencies]
 bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
 blake3 = "1.3.2"
-bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
+bls-signatures = { git = "https://github.com/dashpay/bls-signatures", rev = "09c00502f301bde2bb4e3591848fd8a29b49d81b", features = ["legacy", "bip32", "apple", "use_serde" ]  }
 byte = "0.2"
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation", "ed25519-dalek"], default-features = false, branch = "feat/ferment" }
 dash-spv-keychain = { workspace = true }
