--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,20 +1,8 @@
 [target.aarch64-apple-ios]
-rustflags = ["-C", "link-arg=-target", "-C", "link-arg=arm64-apple-ios15.0"]
-#rustflags = ["-C", "link-arg=-mios-version-min=13.0", "-C", "link-arg=--target=arm64-apple-ios13.0"]
+rustflags = ["-C", "link-arg=-target", "-C", "link-arg=arm64-apple-ios15.0", "-C", "link-arg=-mios-version-min=15.0"]
 
 [target.x86_64-apple-ios]
-rustflags = ["-C", "link-arg=-target", "-C", "link-arg=x86_64-apple-ios15.0"]
+rustflags = ["-C", "link-arg=-target", "-C", "link-arg=x86_64-apple-ios15.0", "-C", "link-arg=-mios-simulator-version-min=15.0"]
 
 [target.aarch64-apple-ios-sim]
-rustflags = ["-C", "link-arg=-target", "-C", "link-arg=arm64-apple-ios15.0-simulator"]
-
-# .cargo/config.toml
-
-#[target.aarch64-apple-ios]
-#rustflags = ["-C", "link-arg=-miphoneos-version-min=13.0"]
-#
-#[target.aarch64-apple-ios-sim]
-#rustflags = ["-C", "link-arg=-mios-simulator-version-min=13.0"]
-#
-#[target.x86_64-apple-ios]
-#rustflags = ["-C", "link-arg=-mios-simulator-version-min=13.0"]
+rustflags = ["-C", "link-arg=-target", "-C", "link-arg=arm64-apple-ios15.0-simulator", "-C", "link-arg=-mios-simulator-version-min=15.0"]
